--- a/2017/2017-11/2017-11-23/source/300x250.css
+++ b/2017/2017-11/2017-11-23/source/300x250.css
@@ -510,19 +510,15 @@
   -moz-animation: fadeInDown 0.75s ease-in-out 2s forwards;
   animation: fadeInDown 0.75s ease-in-out 2s forwards;
 }
-.text1-container {
-  -webkit-animation: fadeOut 0.75s ease-in-out 4.25s forwards;
-  -moz-animation: fadeOut 0.75s ease-in-out 4.25s forwards;
-  animation: fadeOut 0.75s ease-in-out 4.25s forwards; 
-}
-.text2 {
-  background: url('./images/300x250_text2.png');
-  width: 224px;
-  height: 81px;
-  top: 7px;
-  left: 41px;
 
-  -webkit-animation: fadeInDown 0.75s ease-in-out 4.75s forwards;
-  -moz-animation: fadeInDown 0.75s ease-in-out 4.75s forwards;
-  animation: fadeInDown 0.75s ease-in-out 4.75s forwards;
+.cta {
+  background: url('./images/300x250_cta.png') no-repeat center center;
+  width: 103px;
+  height: 23px;
+  top: 54px;
+  left: 183px;
+
+  -webkit-animation: fadeInUp 0.75s ease-in-out 3s forwards;
+  -moz-animation: fadeInUp 0.75s ease-in-out 3s forwards;
+  animation: fadeInUp 0.75s ease-in-out 3s forwards;
 }
