--- a/2017/2017-11/2017-11-23/source/320x50.css
+++ b/2017/2017-11/2017-11-23/source/320x50.css
@@ -501,12 +501,24 @@
 }
 .text {
   background: url('./images/320x50_text.png') no-repeat center center;
-  width: 188px;
-  height: 38px;
+  width: 162px;
+  height: 33px;
   top: 1px;
   left: 88px;
 
   -webkit-animation: fadeInDown 0.75s ease-in-out 2s forwards;
   -moz-animation: fadeInDown 0.75s ease-in-out 2s forwards;
   animation: fadeInDown 0.75s ease-in-out 2s forwards;
+}
+
+.cta {
+  background: url('./images/320x50_cta.png') no-repeat center center;
+  width: 88px;
+  height: 15px;
+  top: 21px;
+  right: 46px;
+
+  -webkit-animation: fadeInUp 0.75s ease-in-out 3s forwards;
+  -moz-animation: fadeInUp 0.75s ease-in-out 3s forwards;
+  animation: fadeInUp 0.75s ease-in-out 3s forwards;
 }
