--- a/2017/2017-11/2017-11-24_2/source/300x600.css
+++ b/2017/2017-11/2017-11-24_2/source/300x600.css
@@ -481,7 +481,7 @@
   animation: hideContent 10ms ease-in-out 0s forwards; 
 }
 .bg {
-  background: #d5cc0d;
+  background: url('./images/300x600_bg.png') no-repeat center center;
   background-size: 100% auto;
 
   -webkit-animation: fadeIn 0.75s ease-in-out 0.75s forwards;
@@ -502,13 +502,13 @@
 .person {
   background: url('./images/300x600_person.png') no-repeat center center;
   width: 300px;
-  height: 537px;
-  top: 26px;
+  height: 473px;
+  top: 73px;
   right: 0px;
 
-  -webkit-transform-origin: 100% 0%;
-  -moz-transform-origin: 100% 0%;
-  transform-origin: 100% 0%;
+  -webkit-transform-origin: 50% 100%;
+  -moz-transform-origin: 50% 100%;
+  transform-origin: 50% 100%;
 
   -webkit-animation: zoomIn 1.25s ease-in-out 0.75s forwards;
   -moz-animation: zoomIn 1.25s ease-in-out 0.75s forwards;
