--- a/2018/2018-01/2018-01-17/source/300x600.css
+++ b/2018/2018-01/2018-01-17/source/300x600.css
@@ -523,7 +523,7 @@
   left: 0px;
   bottom: 0px;
 
-  -webkit-animation: fadeInUp 0.75s ease-in-out 0.5s forwards;
-  -moz-animation: fadeInUp 0.75s ease-in-out 0.5s forwards;
-  animation: fadeInUp 0.75s ease-in-out 0.5s forwards;
+  -webkit-animation: fadeIn 0.75s ease-in-out 0.5s forwards;
+  -moz-animation: fadeIn 0.75s ease-in-out 0.5s forwards;
+  animation: fadeIn 0.75s ease-in-out 0.5s forwards;
 }
