--- a/2018/2018-01/2018-01-17/source/728x90.css
+++ b/2018/2018-01/2018-01-17/source/728x90.css
@@ -561,7 +561,7 @@
   right: 0px;
   bottom: 0px;
 
-  -webkit-animation: fadeInLeft 0.75s ease-in-out 0.5s forwards;
-  -moz-animation: fadeInLeft 0.75s ease-in-out 0.5s forwards;
-  animation: fadeInLeft 0.75s ease-in-out 0.5s forwards;
+  -webkit-animation: fadeIn 0.75s ease-in-out 0.5s forwards;
+  -moz-animation: fadeIn 0.75s ease-in-out 0.5s forwards;
+  animation: fadeIn 0.75s ease-in-out 0.5s forwards;
 }
