--- a/2018/2018-02/2018-02-04/source/300x600_v2.css
+++ b/2018/2018-02/2018-02-04/source/300x600_v2.css
@@ -575,14 +575,14 @@
   animation: hideContent 10ms ease-in-out 0s forwards; 
 }
 .bg {
-  background: url('./images/300x600_bg.jpg') no-repeat center center;
+  background: url('./images/300x600_bg_v2.jpg') no-repeat center center;
 
   -webkit-animation: fadeIn 0.75s ease-in-out 0.5s forwards;
   -moz-animation: fadeIn 0.75s ease-in-out 0.5s forwards;
   animation: fadeIn 0.75s ease-in-out 0.5s forwards;
 }
 .text {
-  background: url('./images/300x600_text.png') no-repeat center center;
+  background: url('./images/300x600_text_v2.png') no-repeat center center;
   width: 212px;
   height: 91px;
   top: 114px;
@@ -593,7 +593,7 @@
   animation: fadeIn 0.75s ease-in-out 0.75s forwards;
 }
 .people {
-  background: url('./images/300x600_people.png') no-repeat center center;
+  background: url('./images/300x600_people_v2.png') no-repeat center center;
   width: 300px;
   height: 283px;
   left: 0px;
@@ -604,7 +604,7 @@
   animation: fadeIn 0.75s ease-in-out 2.5s forwards;
 }
 .logo {
-  background: url('./images/300x600_logo.png') no-repeat center center;
+  background: url('./images/300x600_logo_v2.png') no-repeat center center;
   width: 198px;
   height: 26px;
   top: 20px;
@@ -615,7 +615,7 @@
   animation: fadeIn 0.75s ease-in-out 2.5s forwards;
 }
 .bg2 {
-  background: url('./images/300x600_bg2.png') no-repeat center center;
+  background: url('./images/300x600_bg2_v2.png') no-repeat center center;
   width: 267px;
   height: 564px;
   top: 0px;
@@ -633,7 +633,7 @@
   overflow: hidden;
 }
 .line1 {
-  background: url('./images/300x600_line1.png') no-repeat center center;
+  background: url('./images/300x600_line1_v2.png') no-repeat center center;
   width: 239px;
   height: 2px;
   top: 93px;
@@ -644,7 +644,7 @@
   animation: fadeInRight100 0.75s ease-in-out 3.5s forwards;
 }
 .line2 {
-  background: url('./images/300x600_line2.png') no-repeat center center;
+  background: url('./images/300x600_line2_v2.png') no-repeat center center;
   width: 239px;
   height: 2px;
   top: 259px;
@@ -655,7 +655,7 @@
   animation: fadeInRight100 0.75s ease-in-out 3.5s forwards;
 }
 .call {
-  background: url('./images/300x600_call.png') no-repeat center center;
+  background: url('./images/300x600_call_v2.png') no-repeat center center;
   width: 116px;
   height: 22px;
   top: 218px;
