--- a/2018/2018-02/2018-02-06/source/300x250_mobile_F3.css
+++ b/2018/2018-02/2018-02-06/source/300x250_mobile_F3.css
@@ -441,8 +441,8 @@
   position: absolute;
   top: 0px;
   left: 0px;
-  width: 728px;
-  height: 90px;
+  width: 300px;
+  height: 250px;
   display: block;
 }
 
@@ -481,29 +481,29 @@
   animation: hideContent 10ms ease-in-out 0s forwards; 
 }
 .bg {
-  background: url('./images/728x90_bg.jpg') no-repeat center center;
+  background: url('./images/300x250_mobile_bg_F3.jpg') no-repeat center center;
 
   -webkit-animation: fadeIn 0.75s ease-in-out 0.5s forwards;
   -moz-animation: fadeIn 0.75s ease-in-out 0.5s forwards;
   animation: fadeIn 0.75s ease-in-out 0.5s forwards;
 }
 .logo {
-  background: url('./images/728x90_logo.png') no-repeat center center;
+  background: url('./images/300x250_mobile_logo_F3.png') no-repeat center center;
   width: 100px;
   height: 30px;
-  top: 3px;
-  right: 197px;
+  top: 0px;
+  right: 0px;
 
   -webkit-animation: fadeInDown 0.75s ease-in-out 1s forwards;
   -moz-animation: fadeInDown 0.75s ease-in-out 1s forwards;
   animation: fadeInDown 0.75s ease-in-out 1s forwards;
 }
 .text {
-  background: url('./images/728x90_text.png') no-repeat center center;
+  background: url('./images/300x250_mobile_text_F3.png') no-repeat center center;
   width: 200px;
   height: 56px;
-  top: 0px;
-  left: 11px;
+  top: 146px;
+  left: 9px;
 
   -webkit-animation: fadeInUp 0.75s ease-in-out 2s forwards;
   -moz-animation: fadeInUp 0.75s ease-in-out 2s forwards;
