--- a/2018/2018-02/2018-02-06/source/320x50_F3.css
+++ b/2018/2018-02/2018-02-06/source/320x50_F3.css
@@ -323,6 +323,44 @@
   }
 }
 
+/*-- fade in left --*/
+@-webkit-keyframes fadeInLeft {
+  0%   {
+    visibility: visible;
+    -webkit-transform: translate(30px, 0);
+    opacity: 0;
+  }
+  100% { 
+    visibility: visible;
+    -webkit-transform: translate(0, 0);
+    opacity: 1;
+  }
+}
+@-moz-keyframes fadeInLeft {
+  0%   {
+    visibility: visible;
+    -moz-transform: translate(30px, 0);
+    opacity: 0;
+  }
+  100% { 
+    visibility: visible;
+    -moz-transform: translate(0, 0);
+    opacity: 1;
+  }
+}
+@keyframes fadeInLeft {
+  0%   {
+    visibility: visible;
+    transform: translate(30px, 0);
+    opacity: 0;
+  }
+  100% { 
+    visibility: visible;
+    transform: translate(0, 0);
+    opacity: 1;
+  }
+}
+
 /*-- fade in left 100 --*/
 @-webkit-keyframes fadeInLeft100 {
   0%   {
@@ -441,8 +479,8 @@
   position: absolute;
   top: 0px;
   left: 0px;
-  width: 300px;
-  height: 250px;
+  width: 320px;
+  height: 50px;
   display: block;
 }
 
@@ -481,31 +519,45 @@
   animation: hideContent 10ms ease-in-out 0s forwards; 
 }
 .bg {
-  background: url('./images/300x250_mobile_bg.jpg') no-repeat center center;
-
+  background: url('./images/320x50_bg_F3.jpg') no-repeat center center;
+  background-size: 100% auto;
   -webkit-animation: fadeIn 0.75s ease-in-out 0.5s forwards;
   -moz-animation: fadeIn 0.75s ease-in-out 0.5s forwards;
   animation: fadeIn 0.75s ease-in-out 0.5s forwards;
 }
 .logo {
-  background: url('./images/300x250_mobile_logo.png') no-repeat center center;
-  width: 100px;
-  height: 30px;
-  top: 0px;
-  right: 0px;
+  background: url('./images/320x50_logo_F3.png') no-repeat center center;
+  background-size: 100% auto;
+  width: 42px;
+  height: 14px;
+  top: 1px;
+  left: 106px;
 
   -webkit-animation: fadeInDown 0.75s ease-in-out 1s forwards;
   -moz-animation: fadeInDown 0.75s ease-in-out 1s forwards;
   animation: fadeInDown 0.75s ease-in-out 1s forwards;
 }
 .text {
-  background: url('./images/300x250_mobile_text.png') no-repeat center center;
-  width: 200px;
-  height: 56px;
-  top: 146px;
-  left: 9px;
+  background: url('./images/320x50_text_F3.png') no-repeat center center;
+  background-size: auto 100%;
+  width: 82px;
+  height: 24px;
+  top: 9px;
+  left: 17px;
 
-  -webkit-animation: fadeInUp 0.75s ease-in-out 2s forwards;
-  -moz-animation: fadeInUp 0.75s ease-in-out 2s forwards;
-  animation: fadeInUp 0.75s ease-in-out 2s forwards;
+  -webkit-animation: fadeInRight 0.75s ease-in-out 2s forwards;
+  -moz-animation: fadeInRight 0.75s ease-in-out 2s forwards;
+  animation: fadeInRight 0.75s ease-in-out 2s forwards;
+}
+.cta {
+  background: url('./images/320x50_cta_F3.png') no-repeat center center;
+  background-size: 100% auto;
+  width: 106px;
+  height: 19px;
+  top: 16px;
+  right: 6px;
+
+  -webkit-animation: fadeInLeft 0.75s ease-in-out 3s forwards;
+  -moz-animation: fadeInLeft 0.75s ease-in-out 3s forwards;
+  animation: fadeInLeft 0.75s ease-in-out 3s forwards;
 }
